--- a/memo-cata.cabal
+++ b/memo-cata.cabal
@@ -4,7 +4,7 @@ cabal-version: 1.12
 --
 -- see: https://github.com/sol/hpack
 --
--- hash: 913492dfcc66cc3f430dbd1a4c78c6e18e1e2c7c30a8ed71d5178216182ef735
+-- hash: f9fe3c1185b457639c9b40135d9eb185558f54ab436f25c8a8d5d69f84b0b163
 
 name:           memo-cata
 version:        0.1.0.0
@@ -27,13 +27,22 @@ source-repository head
 
 library
   exposed-modules:
+      Generics
+      Generics.Data.Digest.CRC32
+      GenericTree
       Lib
+      Tree
   other-modules:
       Paths_memo_cata
   hs-source-dirs:
       src
   build-depends:
       base >=4.7 && <5
+    , bytestring
+    , containers
+    , deepseq
+    , digest
+    , mtl
   default-language: Haskell2010
 
 executable memo-cata-exe
@@ -45,7 +54,12 @@ executable memo-cata-exe
   ghc-options: -threaded -rtsopts -with-rtsopts=-N
   build-depends:
       base >=4.7 && <5
+    , bytestring
+    , containers
+    , deepseq
+    , digest
     , memo-cata
+    , mtl
   default-language: Haskell2010
 
 test-suite memo-cata-test
@@ -58,5 +72,10 @@ test-suite memo-cata-test
   ghc-options: -threaded -rtsopts -with-rtsopts=-N
   build-depends:
       base >=4.7 && <5
+    , bytestring
+    , containers
+    , deepseq
+    , digest
     , memo-cata
+    , mtl
   default-language: Haskell2010
