--- a/package.yaml
+++ b/package.yaml
@@ -20,7 +20,12 @@ extra-source-files:
 description:         Please see the README on GitHub at <https://github.com/githubuser/memo-cata#readme>
 
 dependencies:
-- base >= 4.7 && < 5
+  - base >= 4.7 && < 5
+  - containers
+  - mtl
+  - digest
+  - deepseq
+  - bytestring
 
 library:
   source-dirs: src
