--- a/package.yaml
+++ b/package.yaml
@@ -1,14 +1,13 @@
-name:                memo-cata
-version:             0.1.0.0
-github:              "githubuser/memo-cata"
-license:             BSD3
-author:              "Author name here"
-maintainer:          "example@example.com"
-copyright:           "2022 Author name here"
+name: memo-cata
+version: 0.1.0.0
+github: "githubuser/memo-cata"
+license: BSD3
+author: "Author name here"
+maintainer: "example@example.com"
+copyright: "2022 Author name here"
 
 extra-source-files:
-- README.md
-- ChangeLog.md
+  - README.md
 
 # Metadata used when publishing your package
 # synopsis:            Short description of your package
@@ -17,7 +16,7 @@ extra-source-files:
 # To avoid duplicated efforts in documentation and dealing with the
 # complications of embedding Haddock markup inside cabal files, it is
 # common to point users to the README.md file.
-description:         Please see the README on GitHub at <https://github.com/githubuser/memo-cata#readme>
+description: Please see the README on GitHub at <https://github.com/githubuser/memo-cata#readme>
 
 dependencies:
   - base >= 4.7 && < 5
@@ -32,22 +31,23 @@ library:
 
 executables:
   memo-cata-exe:
-    main:                Main.hs
-    source-dirs:         app
+    main: Main.hs
+    source-dirs: app
     ghc-options:
-    - -threaded
-    - -rtsopts
-    - -with-rtsopts=-N
+      - -threaded
+      - -rtsopts
+      - -with-rtsopts=-N
     dependencies:
-    - memo-cata
+      - memo-cata
+      - criterion
 
 tests:
   memo-cata-test:
-    main:                Spec.hs
-    source-dirs:         test
+    main: Spec.hs
+    source-dirs: test
     ghc-options:
-    - -threaded
-    - -rtsopts
-    - -with-rtsopts=-N
+      - -threaded
+      - -rtsopts
+      - -with-rtsopts=-N
     dependencies:
-    - memo-cata
+      - memo-cata
