--- a/stack.yaml
+++ b/stack.yaml
@@ -30,7 +30,7 @@ resolver:
 #   - auto-update
 #   - wai
 packages:
-- .
+  - .
 # Dependency packages to be pulled from upstream that are not in the resolver.
 # These entries can reference officially published versions as well as
 # forks / in-progress versions pinned to a git hash. For example:
@@ -42,7 +42,7 @@ packages:
 #
 extra-deps:
   - digest-0.0.1.3
-
+  - criterion-1.5.12.0
 # Override default flag values for local packages and extra-deps
 # flags: {}
 
