--- a/stack.yaml
+++ b/stack.yaml
@@ -43,6 +43,7 @@ packages:
 extra-deps:
   - digest-0.0.1.3
   - criterion-1.5.12.0
+  - bytestring-trie-0.2.6
 # Override default flag values for local packages and extra-deps
 # flags: {}
 
