--- a/memo-cata.cabal
+++ b/memo-cata.cabal
@@ -4,7 +4,7 @@ cabal-version: 1.12
 --
 -- see: https://github.com/sol/hpack
 --
--- hash: c198ffdf4fdfb7fd052eb1e54d21f80fc087faeb9554a3b070fe40eac0b184ad
+-- hash: 87f56869acfc64a8f867427aff6b8531127ca690c9dc99b5dcf846b88c86d23f
 
 name:           memo-cata
 version:        0.1.0.0
@@ -41,11 +41,14 @@ library
   build-depends:
       base >=4.7 && <5
     , bytestring
+    , bytestring-conversion
     , bytestring-trie
     , containers
     , deepseq
     , digest
     , mtl
+    , text
+    , utf8-string
   default-language: Haskell2010
 
 executable memo-cata-exe
@@ -58,6 +61,7 @@ executable memo-cata-exe
   build-depends:
       base >=4.7 && <5
     , bytestring
+    , bytestring-conversion
     , bytestring-trie
     , containers
     , criterion
@@ -65,6 +69,8 @@ executable memo-cata-exe
     , digest
     , memo-cata
     , mtl
+    , text
+    , utf8-string
   default-language: Haskell2010
 
 test-suite memo-cata-test
@@ -78,10 +84,13 @@ test-suite memo-cata-test
   build-depends:
       base >=4.7 && <5
     , bytestring
+    , bytestring-conversion
     , bytestring-trie
     , containers
     , deepseq
     , digest
     , memo-cata
     , mtl
+    , text
+    , utf8-string
   default-language: Haskell2010
