--- a/stack.yaml
+++ b/stack.yaml
@@ -44,6 +44,8 @@ extra-deps:
   - digest-0.0.1.3
   - criterion-1.5.12.0
   - bytestring-trie-0.2.6
+  - hspec-2.7.10
+  - QuickCheck-2.14.2
 # Override default flag values for local packages and extra-deps
 # flags: {}
 
