--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -8,7 +8,7 @@ jobs:
       - uses: actions/checkout@v2
       - name: Check stylish-haskell and hlint
         run: |
-          curl -sSL https://raw.github.com/ndmitchell/hlint/master/misc/run.sh | sh -s .
+          curl -sSL https://raw.github.com/ndmitchell/hlint/master/misc/run.sh | sh -s memo-cata-prototype
           curl -sSL https://raw.github.com/jaspervdj/stylish-haskell/master/scripts/latest.sh | sh -s $(find . -type f -name "*.hs" ! -path "*.stack-work*" ! -path "*executable*") -i
           if [ -z "$(git status --porcelain)" ]; then
               echo "No style errors detected."
@@ -29,8 +29,8 @@ jobs:
         with:
           path: |
             ~/.stack
-            .stack-work
-          key: ${{ runner.os }}-${{ hashFiles('stack.yaml.lock', 'package.yaml') }}
+            prototype/.stack-work
+          key: ${{ runner.os }}-${{ hashFiles('prototype/stack.yaml.lock', 'prototype/package.yaml') }}
       - uses: haskell/actions/setup@v1
         with:
           enable-stack: true
@@ -38,6 +38,8 @@ jobs:
           cabal-version: "latest"
           stack-version: "latest"
       - name: Stack build
+        working-directory: ./prototype
         run: stack build
       - name: Stack test
+        working-directory: ./prototype
         run: stack test
