--- a/prototype/package.yaml
+++ b/prototype/package.yaml
@@ -1,13 +1,10 @@
-name: memo-cata
+name: memo-cata-prototype
 version: 0.1.0.0
-github: "githubuser/memo-cata"
+github: "jortvangorkum/memo-cata"
 license: BSD3
-author: "Author name here"
-maintainer: "example@example.com"
-copyright: "2022 Author name here"
-
-extra-source-files:
-  - README.md
+author: "Jort van Gorkum"
+maintainer: "jortvangorkum@gmail.com"
+copyright: "2022 Jort van Gorkum"
 
 # Metadata used when publishing your package
 # synopsis:            Short description of your package
@@ -16,7 +13,7 @@ extra-source-files:
 # To avoid duplicated efforts in documentation and dealing with the
 # complications of embedding Haddock markup inside cabal files, it is
 # common to point users to the README.md file.
-description: Please see the README on GitHub at <https://github.com/githubuser/memo-cata#readme>
+description: Please see the README on GitHub at <https://github.com/jortvangorkum/memo-cata#readme>
 
 dependencies:
   - base >= 4.7 && < 5
