--- a/prototype/memo-cata-prototype.cabal
+++ b/prototype/memo-cata-prototype.cabal
@@ -4,25 +4,22 @@ cabal-version: 1.12
 --
 -- see: https://github.com/sol/hpack
 --
--- hash: a1e8d74cbd34ad3e3d497c191672ec4dc7b0cc7f8a9f0ac3f7f733f77df1db71
+-- hash: 41493ad88028519ba93f0e9bb7d11d6f1b2d1ecfc38322a25c8d7fcbdba967a7
 
-name:           memo-cata
+name:           memo-cata-prototype
 version:        0.1.0.0
-description:    Please see the README on GitHub at <https://github.com/githubuser/memo-cata#readme>
-homepage:       https://github.com/githubuser/memo-cata#readme
-bug-reports:    https://github.com/githubuser/memo-cata/issues
-author:         Author name here
-maintainer:     example@example.com
-copyright:      2022 Author name here
+description:    Please see the README on GitHub at <https://github.com/jortvangorkum/memo-cata#readme>
+homepage:       https://github.com/jortvangorkum/memo-cata#readme
+bug-reports:    https://github.com/jortvangorkum/memo-cata/issues
+author:         Jort van Gorkum
+maintainer:     jortvangorkum@gmail.com
+copyright:      2022 Jort van Gorkum
 license:        BSD3
-license-file:   LICENSE
 build-type:     Simple
-extra-source-files:
-    README.md
 
 source-repository head
   type: git
-  location: https://github.com/githubuser/memo-cata
+  location: https://github.com/jortvangorkum/memo-cata
 
 library
   exposed-modules:
@@ -36,7 +33,7 @@ library
       Lib
       Tree
   other-modules:
-      Paths_memo_cata
+      Paths_memo_cata_prototype
   hs-source-dirs:
       src
   build-depends:
@@ -52,7 +49,7 @@ library
 executable memo-cata-exe
   main-is: Main.hs
   other-modules:
-      Paths_memo_cata
+      Paths_memo_cata_prototype
   hs-source-dirs:
       app
   ghc-options: -threaded -rtsopts -with-rtsopts=-N
@@ -64,7 +61,7 @@ executable memo-cata-exe
     , criterion
     , deepseq
     , digest
-    , memo-cata
+    , memo-cata-prototype
     , mtl
   default-language: Haskell2010
 
@@ -76,7 +73,7 @@ test-suite memo-cata-test
       Test.Helper
       UnitTests.GenericTreeSpec
       UnitTests.UpdateMerkleTreeSpec
-      Paths_memo_cata
+      Paths_memo_cata_prototype
   hs-source-dirs:
       test
   ghc-options: -threaded -rtsopts -with-rtsopts=-N
@@ -89,6 +86,6 @@ test-suite memo-cata-test
     , deepseq
     , digest
     , hspec
-    , memo-cata
+    , memo-cata-prototype
     , mtl
   default-language: Haskell2010
