--- a/prototype/hie.yaml
+++ b/prototype/hie.yaml
@@ -1,13 +1,13 @@
 cradle:
   stack:
     - path: "./src"
-      component: "memo-cata:lib"
+      component: "memo-cata-prototype:lib"
 
     - path: "./app/Main.hs"
-      component: "memo-cata:exe:memo-cata-exe"
+      component: "memo-cata-prototype:exe:memo-cata-exe"
 
-    - path: "./app/Paths_memo_cata.hs"
-      component: "memo-cata:exe:memo-cata-exe"
+    - path: "./app/Paths_memo_cata_prototype.hs"
+      component: "memo-cata-prototype:exe:memo-cata-exe"
 
     - path: "./test"
-      component: "memo-cata:test:memo-cata-test"
+      component: "memo-cata-prototype:test:memo-cata-test"
