--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -9,7 +9,7 @@ jobs:
       - name: Check stylish-haskell and hlint
         run: |
           curl -sSL https://raw.github.com/ndmitchell/hlint/master/misc/run.sh | sh -s prototype
-          curl -sSL https://raw.github.com/jaspervdj/stylish-haskell/master/scripts/latest.sh | sh -s $(find ./prototype -type f -name "*.hs" ! -path "*.stack-work*" ! -path "*executable*") -i
+          ./.github/stylish-haskell-0.13.0.0.sh | sh -s $(find ./prototype -type f -name "*.hs" ! -path "*.stack-work*" ! -path "*executable*") -i
           if [ -z "$(git status --porcelain)" ]; then
               echo "No style errors detected."
           else
