--- a/.github/workflows/prototype.yaml
+++ b/.github/workflows/prototype.yaml
@@ -5,7 +5,7 @@ on:
       - 'prototype/**'
 jobs:
   call-workflow:
-    uses: ./github/workflows/build.yml
+    uses: ./.github/workflows/build.yml
     with:
       project: prototype
     secrets:
