--- a/.github/workflows/prototype.yaml
+++ b/.github/workflows/prototype.yaml
@@ -6,7 +6,7 @@ on:
       - 'prototype/**'
 jobs:
   call-workflow:
-    uses: ./.github/workflows/build.yml
+    uses: ./.github/workflows/build.yaml
     with:
       project: prototype
     secrets:
