--- a/regular/memo-cata-regular.cabal
+++ b/regular/memo-cata-regular.cabal
@@ -27,6 +27,9 @@ library
       src
   build-depends:
       base >=4.7 && <5
+    , digest
+    , regular
+    , template-haskell
   default-language: Haskell2010
 
 executable memo-cata-regular-exe
@@ -38,7 +41,10 @@ executable memo-cata-regular-exe
   ghc-options: -threaded -rtsopts -with-rtsopts=-N
   build-depends:
       base >=4.7 && <5
+    , digest
     , memo-cata-regular
+    , regular
+    , template-haskell
   default-language: Haskell2010
 
 test-suite memo-cata-regular-test
@@ -51,5 +57,8 @@ test-suite memo-cata-regular-test
   ghc-options: -threaded -rtsopts -with-rtsopts=-N
   build-depends:
       base >=4.7 && <5
+    , digest
     , memo-cata-regular
+    , regular
+    , template-haskell
   default-language: Haskell2010
