--- a/regular/package.yaml
+++ b/regular/package.yaml
@@ -15,7 +15,10 @@ copyright:           "2022 Jort van Gorkum"
 description:         Please see the README on GitHub at <https://github.com/jortvangorkum/memo-cata#readme>
 
 dependencies:
-- base >= 4.7 && < 5
+  - base >= 4.7 && < 5
+  - regular
+  - template-haskell
+  - digest
 
 library:
   source-dirs: src
