--- a/regular/stack.yaml
+++ b/regular/stack.yaml
@@ -17,8 +17,7 @@
 #
 # resolver: ./custom-snapshot.yaml
 # resolver: https://example.com/snapshots/2018-01-01.yaml
-resolver:
-  url: https://raw.githubusercontent.com/commercialhaskell/stackage-snapshots/master/lts/18/28.yaml
+resolver: ghc-7.10.3
 
 # User packages to be built.
 # Various formats can be used as shown in the example below.
@@ -40,8 +39,10 @@ packages:
 # - git: https://github.com/commercialhaskell/stack.git
 #   commit: e7b331f14bcffb8367cd58fbfc8b40ec7642100a
 #
-# extra-deps: []
-
+extra-deps:
+  - regular-0.3.4.4
+  - template-haskell-2.10.0.0
+  - digest-0.0.1.3
 # Override default flag values for local packages and extra-deps
 # flags: {}
 
