--- a/regular/package.yaml
+++ b/regular/package.yaml
@@ -1,9 +1,9 @@
-name:                memo-cata-regular
-version:             0.1.0.0
-github:              "jortvangorkum/memo-cata"
-author:              "Jort van Gorkum"
-maintainer:          "jortvangorkum@gmail.com"
-copyright:           "2022 Jort van Gorkum"
+name: memo-cata-regular
+version: 0.1.0.0
+github: "jortvangorkum/memo-cata"
+author: "Jort van Gorkum"
+maintainer: "jortvangorkum@gmail.com"
+copyright: "2022 Jort van Gorkum"
 
 # Metadata used when publishing your package
 # synopsis:            Short description of your package
@@ -12,35 +12,36 @@ copyright:           "2022 Jort van Gorkum"
 # To avoid duplicated efforts in documentation and dealing with the
 # complications of embedding Haddock markup inside cabal files, it is
 # common to point users to the README.md file.
-description:         Please see the README on GitHub at <https://github.com/jortvangorkum/memo-cata#readme>
+description: Please see the README on GitHub at <https://github.com/jortvangorkum/memo-cata#readme>
 
 dependencies:
   - base >= 4.7 && < 5
   - regular
   - template-haskell
   - digest
+  - bytestring
 
 library:
   source-dirs: src
 
 executables:
   memo-cata-regular-exe:
-    main:                Main.hs
-    source-dirs:         app
+    main: Main.hs
+    source-dirs: app
     ghc-options:
-    - -threaded
-    - -rtsopts
-    - -with-rtsopts=-N
+      - -threaded
+      - -rtsopts
+      - -with-rtsopts=-N
     dependencies:
-    - memo-cata-regular
+      - memo-cata-regular
 
 tests:
   memo-cata-regular-test:
-    main:                Spec.hs
-    source-dirs:         test
+    main: Spec.hs
+    source-dirs: test
     ghc-options:
-    - -threaded
-    - -rtsopts
-    - -with-rtsopts=-N
+      - -threaded
+      - -rtsopts
+      - -with-rtsopts=-N
     dependencies:
-    - memo-cata-regular
+      - memo-cata-regular
