--- a/regular/stack.yaml
+++ b/regular/stack.yaml
@@ -43,6 +43,7 @@ extra-deps:
   - regular-0.3.4.4
   - template-haskell-2.10.0.0
   - digest-0.0.1.3
+  - mtl-2.2.2
 # Override default flag values for local packages and extra-deps
 # flags: {}
 
