--- a/regular/memo-cata-regular.cabal
+++ b/regular/memo-cata-regular.cabal
@@ -21,6 +21,9 @@ source-repository head
 library
   exposed-modules:
       Generics.Data.Digest.CRC32
+      Generics.Memo.Cata
+      Generics.Memo.Main
+      GenericTree.Main
       Lib
   other-modules:
       Paths_memo_cata_regular
