--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -1,5 +1,14 @@
-name: Memo Cata GitHub Actions
-on: [push]
+name: Memo Cata Build
+on: 
+  workflow_call:
+    inputs:
+      project:
+        required: true
+        type: string
+      ghc-version:
+        required: false
+        type: string
+        default: 8.10.7 # =18.25
 jobs:
   linting-haskell:
     name: Linting Haskell
@@ -8,8 +17,8 @@ jobs:
       - uses: actions/checkout@v2
       - name: Check stylish-haskell and hlint
         run: |
-          curl -sSL https://raw.github.com/ndmitchell/hlint/master/misc/run.sh | sh -s .
-          curl -sSL https://raw.github.com/jaspervdj/stylish-haskell/master/scripts/latest.sh | sh -s $(find . -type f -name "*.hs" ! -path "*.stack-work*" ! -path "*executable*") -i
+          curl -sSL https://raw.github.com/ndmitchell/hlint/master/misc/run.sh | sh -s ${{ inputs.project }}
+          sh ./.github/stylish-haskell-0.13.0.0.sh | sh -s $(find ./${{ inputs.project }} -type f -name "*.hs" ! -path "*.stack-work*" ! -path "*executable*") -i
           if [ -z "$(git status --porcelain)" ]; then
               echo "No style errors detected."
           else
@@ -29,15 +38,17 @@ jobs:
         with:
           path: |
             ~/.stack
-            .stack-work
-          key: ${{ runner.os }}-${{ hashFiles('stack.yaml.lock', 'package.yaml') }}
+            ${{ inputs.project }}/.stack-work
+          key: ${{ runner.os }}-${{ hashFiles('${{ inputs.project }}/stack.yaml.lock', '${{ inputs.project }}/package.yaml') }}
       - uses: haskell/actions/setup@v1
         with:
           enable-stack: true
-          ghc-version: 8.10.7 # =18.25
+          ghc-version: ${{ inputs.ghc-version }}
           cabal-version: "latest"
           stack-version: "latest"
       - name: Stack build
+        working-directory: ./${{ inputs.project }}
         run: stack build
       - name: Stack test
+        working-directory: ./${{ inputs.project }}
         run: stack test
