--- a/regular/package.yaml
+++ b/regular/package.yaml
@@ -1,13 +1,9 @@
-name: memo-cata
+name: memo-cata-regular
 version: 0.1.0.0
-github: "githubuser/memo-cata"
-license: BSD3
-author: "Author name here"
-maintainer: "example@example.com"
-copyright: "2022 Author name here"
-
-extra-source-files:
-  - README.md
+github: "jortvangorkum/memo-cata"
+author: "Jort van Gorkum"
+maintainer: "jortvangorkum@gmail.com"
+copyright: "2022 Jort van Gorkum"
 
 # Metadata used when publishing your package
 # synopsis:            Short description of your package
@@ -16,23 +12,22 @@ extra-source-files:
 # To avoid duplicated efforts in documentation and dealing with the
 # complications of embedding Haddock markup inside cabal files, it is
 # common to point users to the README.md file.
-description: Please see the README on GitHub at <https://github.com/githubuser/memo-cata#readme>
+description: Please see the README on GitHub at <https://github.com/jortvangorkum/memo-cata#readme>
 
 dependencies:
   - base >= 4.7 && < 5
-  - containers
-  - mtl
+  - regular
+  - template-haskell
   - digest
-  - deepseq
   - bytestring
-  - bytestring-trie
   - mtl
+  - containers
 
 library:
   source-dirs: src
 
 executables:
-  memo-cata-exe:
+  memo-cata-regular-exe:
     main: Main.hs
     source-dirs: app
     ghc-options:
@@ -40,11 +35,10 @@ executables:
       - -rtsopts
       - -with-rtsopts=-N
     dependencies:
-      - memo-cata
-      - criterion
+      - memo-cata-regular
 
 tests:
-  memo-cata-test:
+  memo-cata-regular-test:
     main: Spec.hs
     source-dirs: test
     ghc-options:
@@ -52,6 +46,4 @@ tests:
       - -rtsopts
       - -with-rtsopts=-N
     dependencies:
-      - memo-cata
-      - hspec
-      - QuickCheck
+      - memo-cata-regular
