--- a/regular/stack.yaml
+++ b/regular/stack.yaml
@@ -44,6 +44,8 @@ extra-deps:
   - template-haskell-2.10.0.0
   - digest-0.0.1.3
   - mtl-2.2.2
+  - hspec-2.9.4
+  - QuickCheck-2.14.2
 # Override default flag values for local packages and extra-deps
 # flags: {}
 
