--- a/regular/stack.yaml
+++ b/regular/stack.yaml
@@ -17,7 +17,7 @@
 #
 # resolver: ./custom-snapshot.yaml
 # resolver: https://example.com/snapshots/2018-01-01.yaml
-resolver: ghc-7.10.3
+resolver: lts-6.35 # = ghc 7.10.3
 
 # User packages to be built.
 # Various formats can be used as shown in the example below.
@@ -41,11 +41,7 @@ packages:
 #
 extra-deps:
   - regular-0.3.4.4
-  - template-haskell-2.10.0.0
   - digest-0.0.1.3
-  - mtl-2.2.2
-  - hspec-2.9.4
-  - QuickCheck-2.14.2
 # Override default flag values for local packages and extra-deps
 # flags: {}
 
