--- a/regular/memo-cata-regular.cabal
+++ b/regular/memo-cata-regular.cabal
@@ -23,6 +23,7 @@ library
       Generics.Data.Digest.CRC32
       Generics.Memo.Cata
       Generics.Memo.Main
+      GenericTree.Cata
       GenericTree.Main
   other-modules:
       Paths_memo_cata_regular
@@ -60,15 +61,20 @@ test-suite memo-cata-regular-test
   type: exitcode-stdio-1.0
   main-is: Spec.hs
   other-modules:
+      Helper.Arbitrary
+      Helper.Main
+      UnitTests.GenericTreeSpec
       Paths_memo_cata_regular
   hs-source-dirs:
       test
   ghc-options: -threaded -rtsopts -with-rtsopts=-N
   build-depends:
-      base >=4.7 && <5
+      QuickCheck
+    , base >=4.7 && <5
     , bytestring
     , containers
     , digest
+    , hspec
     , memo-cata-regular
     , mtl
     , regular
