Added Eq and Show for Pattern Functors

--- a/regular/memo-cata-regular.cabal
+++ b/regular/memo-cata-regular.cabal
@@ -38,6 +38,7 @@ library
     , mtl
     , regular
     , template-haskell
+    , transformers
   default-language: Haskell2010
 
 executable memo-cata-regular-exe
@@ -56,6 +57,7 @@ executable memo-cata-regular-exe
     , mtl
     , regular
     , template-haskell
+    , transformers
   default-language: Haskell2010
 
 test-suite memo-cata-regular-test
@@ -65,6 +67,7 @@ test-suite memo-cata-regular-test
       Helper.Arbitrary
       Helper.Main
       UnitTests.GenericTreeSpec
+      UnitTests.UpdateMerkleTreeSpec
       Paths_memo_cata_regular
   hs-source-dirs:
       test
@@ -80,4 +83,5 @@ test-suite memo-cata-regular-test
     , mtl
     , regular
     , template-haskell
+    , transformers
   default-language: Haskell2010
