--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -39,7 +39,7 @@ jobs:
           path: |
             ~/.stack
             ${{ inputs.project }}/.stack-work
-          key: ${{ runner.os }}-${{ hashFiles('${{ inputs.project }}/stack.yaml.lock', '${{ inputs.project }}/package.yaml') }}
+          key: ${{ runner.os }}-${{ hashFiles(inputs.project + '/stack.yaml.lock', inputs.project + '/package.yaml') }}
       - uses: haskell/actions/setup@v1
         with:
           enable-stack: true
