--- a/regular/memo-cata-regular.cabal
+++ b/regular/memo-cata-regular.cabal
@@ -42,12 +42,33 @@ library
     , transformers
   default-language: Haskell2010
 
-executable memo-cata-regular-exe
+executable memo-cata-regular-memory
   main-is: Main.hs
   other-modules:
       Paths_memo_cata_regular
   hs-source-dirs:
-      app
+      benchmarks/memory
+  ghc-options: -threaded -rtsopts -with-rtsopts=-N
+  build-depends:
+      base >=4.7 && <5
+    , bytestring
+    , containers
+    , criterion
+    , deepseq
+    , digest
+    , memo-cata-regular
+    , mtl
+    , regular
+    , template-haskell
+    , transformers
+  default-language: Haskell2010
+
+executable memo-cata-regular-time
+  main-is: Main.hs
+  other-modules:
+      Paths_memo_cata_regular
+  hs-source-dirs:
+      benchmarks/time
   ghc-options: -threaded -rtsopts -with-rtsopts=-N
   build-depends:
       base >=4.7 && <5
