--- a/regular/package.yaml
+++ b/regular/package.yaml
@@ -29,9 +29,20 @@ library:
   source-dirs: src
 
 executables:
-  memo-cata-regular-exe:
+  memo-cata-regular-time:
     main: Main.hs
-    source-dirs: app
+    source-dirs: benchmarks/time
+    ghc-options:
+      - -threaded
+      - -rtsopts
+      - -with-rtsopts=-N
+    dependencies:
+      - memo-cata-regular
+      - criterion
+
+  memo-cata-regular-memory:
+    main: Main.hs
+    source-dirs: benchmarks/memory
     ghc-options:
       - -threaded
       - -rtsopts
