Added time benchmark for cata iter

--- a/regular/memo-cata-regular.cabal
+++ b/regular/memo-cata-regular.cabal
@@ -71,7 +71,8 @@ executable memo-cata-regular-time
       benchmarks/time
   ghc-options: -threaded -rtsopts -with-rtsopts=-N
   build-depends:
-      base >=4.7 && <5
+      QuickCheck
+    , base >=4.7 && <5
     , bytestring
     , containers
     , criterion
