Benchmark cata iter (#14)
* Added time benchmark for cata iter

* Added memory benchmark cata iter

* Apply hints

* Fix tests

* Added iter for cata int and cata gen

* Run benchmark iter

* Apply hints

--- a/regular/package.yaml
+++ b/regular/package.yaml
@@ -39,6 +39,7 @@ executables:
     dependencies:
       - memo-cata-regular
       - criterion
+      - QuickCheck
 
   memo-cata-regular-memory:
     main: Main.hs
@@ -50,6 +51,7 @@ executables:
     dependencies:
       - memo-cata-regular
       - criterion
+      - QuickCheck
 
 tests:
   memo-cata-regular-test:
