Finished refactor memory benchmarks

--- a/regular/memo-cata-regular.cabal
+++ b/regular/memo-cata-regular.cabal
@@ -48,6 +48,7 @@ executable memo-cata-regular-memory
   other-modules:
       MultiIter
       SingleIter
+      Utils
       Paths_memo_cata_regular
   hs-source-dirs:
       benchmarks/memory
