--- a/regular/memo-cata-regular.cabal
+++ b/regular/memo-cata-regular.cabal
@@ -46,8 +46,8 @@ library
 executable memo-cata-regular-memory
   main-is: Main.hs
   other-modules:
-      MultiIter
-      SingleIter
+      Benchmarks.MultiIter
+      Benchmarks.SingleIter
       Utils
       Paths_memo_cata_regular
   hs-source-dirs:
