Use cityhash instead of crc32

--- a/regular/memo-cata-regular.cabal
+++ b/regular/memo-cata-regular.cabal
@@ -20,9 +20,8 @@ source-repository head
 
 library
   exposed-modules:
-      Generics.Data.Digest.CRC32
+      Generics.Data.Digest
       Generics.Memo.Cata.Main
-      Generics.Memo.Cata.RemoveUnused
       Generics.Memo.Container
       Generics.Memo.Main
       Generics.Memo.Zipper
@@ -35,9 +34,12 @@ library
   build-depends:
       base >=4.7 && <5
     , bytestring
+    , cityhash
     , containers
     , deepseq
     , digest
+    , hashable
+    , largeword
     , mtl
     , regular
     , template-haskell
@@ -61,10 +63,13 @@ executable memo-cata-regular-memory
       QuickCheck
     , base >=4.7 && <5
     , bytestring
+    , cityhash
     , containers
     , criterion
     , deepseq
     , digest
+    , hashable
+    , largeword
     , memo-cata-regular
     , mtl
     , regular
@@ -89,10 +94,13 @@ executable memo-cata-regular-time
       QuickCheck
     , base >=4.7 && <5
     , bytestring
+    , cityhash
     , containers
     , criterion
     , deepseq
     , digest
+    , hashable
+    , largeword
     , memo-cata-regular
     , mtl
     , regular
@@ -117,10 +125,13 @@ test-suite memo-cata-regular-test
       QuickCheck
     , base >=4.7 && <5
     , bytestring
+    , cityhash
     , containers
     , deepseq
     , digest
+    , hashable
     , hspec
+    , largeword
     , memo-cata-regular
     , mtl
     , regular
