--- a/regular/package.yaml
+++ b/regular/package.yaml
@@ -25,6 +25,9 @@ dependencies:
   - containers
   - deepseq
   - unordered-containers
+  - cityhash
+  - largeword
+  - hashable
 
 library:
   source-dirs: src
