--- a/regular/stack.yaml
+++ b/regular/stack.yaml
@@ -42,6 +42,8 @@ packages:
 extra-deps:
   - regular-0.3.4.4
   - digest-0.0.1.3
+  - cityhash-0.3.0.1
+  - largeword-1.2.5
 # Override default flag values for local packages and extra-deps
 # flags: {}
 
